[package]
name = "evaluator_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A evaluation engine library for Rust"
authors = ["tuyentv <vat1906@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tuyentv96/evaluator_rs.git"
documentation = "https://docs.rs/evaluator_rs"
homepage = "https://github.com/tuyentv96/evaluator_rs"
keywords = ["expression", "evaluate", "evaluator", "rule", "engines", "rule-engines"]
categories = ["engines", "evaluate", "evaluator", "expression"]

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
thiserror = "1.0.31"
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"] }
