[package]
name = "evaluator_rs"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A evaluation engine library for Rust"
authors = ["tuyentv <vat1906@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tuyentv96/evaluator_rs.git"
documentation = "https://docs.rs/evaluator_rs"
homepage = "https://github.com/tuyentv96/evaluator_rs"
keywords = ["expression", "evaluate", "evaluator", "rules", "engines"]
categories = ["parsing", "parser-implementations", "game-engines"]

[build-dependencies]
lalrpop = "^0.22"

[dependencies]
lalrpop-util = { version = "^0.22", features = ["lexer"] }
regex = "1"
thiserror = "2.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
